--- a/stack-updater.cabal
+++ b/stack-updater.cabal
@@ -21,6 +21,8 @@ library
                      , text
                      , bytestring
                      , raw-strings-qq
+                     , attoparsec
+                     , regex-compat
   default-language:    Haskell2010
 
 executable stack-updater-exe
@@ -32,6 +34,8 @@ executable stack-updater-exe
                      , yaml
                      , text
                      , bytestring
+                     , attoparsec
+                     , regex-compat
   default-language:    Haskell2010
 
 test-suite stack-updater-test
