Add basic CLI arg parsing with optargs-applicative

--- a/stack-updater.cabal
+++ b/stack-updater.cabal
@@ -28,6 +28,7 @@ library
                      , either
                      , containers
                      , vector
+                     , optparse-applicative
   default-language:    Haskell2010
 
 executable stack-updater-exe
@@ -46,6 +47,7 @@ executable stack-updater-exe
                      , either
                      , containers
                      , vector
+                     , optparse-applicative
   default-language:    Haskell2010
 
 test-suite stack-updater-test
