--- a/stack-updater.cabal
+++ b/stack-updater.cabal
@@ -28,6 +28,7 @@ library
                      , mtl
                      , either
                      , containers
+                     , transformers
                      , vector
                      , optparse-applicative
   default-language:    Haskell2010
@@ -47,6 +48,7 @@ executable stack-updater-exe
                      , mtl
                      , either
                      , containers
+                     , transformers
                      , vector
                      , optparse-applicative
   default-language:    Haskell2010
